<resources>
    <string name="app_name">LoginSignUp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Sign_In">SIGN IN</string>
    <string name="Click_here_to_register"><u>Click here to Sign Up</u></string>
    <string name="enter_email_id_login">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_register_now">New to <b>LearnCodeOnline</b>?Register Now</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="full_name">Enter Full Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="Others">Others</string>
    <string name="WelcomeTo">Welcome To</string>
    <string name="LearnCodeOnline">Learn.Code.Online</string>
</resources>
