<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.mvishal.loginsignup.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/register_imageview_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/arrow_left_black_color"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:text="@string/Sign_up"
                android:textColor="@color/colorApp"

                android:textSize="20sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/register_edit_imageview_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/reg_icon"
            android:visibility="visible" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/edittextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/register_edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_blue_rectangle_border"
                android:gravity="center"
                android:hint="@string/full_name"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/colorApp"
                android:textColorHint="@color/colorGray" />

            <EditText
                android:id="@+id/register_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_blue_rectangle_border"
                android:gravity="center"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/colorApp"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/register_edit_text_Passwod"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_blue_rectangle_border"
                android:gravity="center"
                android:hint="@string/enter_password"

                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/colorApp"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/register_edit_text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_blue_rectangle_border"
                android:gravity="center"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/colorApp"
                android:textColorHint="@android:color/darker_gray" />

            />

            <RelativeLayout
                android:id="@+id/register_relLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <include layout="@layout/layout_gender_radio_buttons" />
            </RelativeLayout>

            <TextView
                android:id="@+id/register_button"
                android:layout_width="200dp"
                android:layout_height="40dp"

                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ripple_blue_white"
                android:gravity="center"
                android:text="@string/Sign_up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"

                />

        </LinearLayout>


    </ScrollView>
</LinearLayout>
