<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mvishal.loginsignup.activity.LoginActivity">

    <ScrollView
        android:id="@+id/login_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/login_image_view_logo_dummpy"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"

                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_white" />

            <EditText
                android:id="@+id/login_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_image_view_logo"

                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center"

                android:hint="@string/enter_email_id_login"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/login_edit_text_password"


                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorWhiteTrans" />


            <EditText
                android:id="@id/login_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_edit_text_email"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center"

                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/login_button_email_password_login"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorWhiteTrans" />

            <TextView
                android:id="@id/login_button_email_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_edit_text_password"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ripple_white_blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/black"

                android:textStyle="bold" />


            <TextView
                android:id="@+id/login_text_view_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button_email_password_login"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/ForgetPassword"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_text_view_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_text_view_forgot_password"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_yet_register_now"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


            <ImageView
                android:id="@+id/login_image_view_logo"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"

                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_white"
                android:visibility="invisible" />


        </RelativeLayout>
        <!--    <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btnback"
                    android:padding="10dp"
                    android:text="@string/Sign_In"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="10dp"
                    android:text="@string/Click_here_to_register"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>-->

    </ScrollView>
</LinearLayout>
